repertoire service refactor